# brainfuck-gui-rs

./: Cargo.toml  README.md  index.html
.github/: dependabot.yml
.github/workflows/: ci.yml  deployment.yml  static-analysis-rust.yml  static-analysis.yml
src/: app.rs  main.rs
