[package]
name = "brainfuck-gui-rs"
version = "1.0.0"
authors = ["Jérémy Audiger"]
edition = "2024"
rust-version = "1.90"

[dependencies]
brainfuck-rs = { git = "https://github.com/jaudiger/brainfuck-rs", rev = "66d445b1de4834b43dd1c86121e530dffcd4c3f1" }
egui = "0.32.3"
eframe = { version = "0.32.3", features = ["wgpu"] }
wgpu = { version = "25.0.2", default-features = false, features = [
    "webgpu",
    "webgl",
] }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
tracing-wasm = "0.2.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
panic = "abort"
strip = "symbols"
