[package]
name = "brainfuck-gui-rs"
version = "1.0.0"
authors = ["Jérémy Audiger"]
edition = "2024"
rust-version = "1.91"

[dependencies]
brainfuck-rs = { git = "https://github.com/jaudiger/brainfuck-rs", rev = "ebff356a881400771dfa7fc47e48238996409626" }
egui = "0.33.3"
eframe = { version = "0.33.3", features = ["wgpu"] }
tracing = "0.1.44"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.58"
tracing-wasm = "0.2.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
panic = "abort"
strip = "symbols"
